# bayesprism-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: parity_checklist.md  source_map.md
notebooks/: r_equivalence_deconvolution.ipynb  tutorial_deconvolution_validation.ipynb
scripts/: check_no_r_policy.py  convert_golden_de_to_npz.py  convert_golden_to_npz.py  generate_fixture_de_small.py  generate_fixture_small.py  generate_golden_de_small.R  generate_golden_small.R
src/bayesprism/: __init__.py  api.py  embedding.py  gibbs.py  models.py  posterior.py  preprocess.py  qc.py  reference_update.py
tests/data/fixtures/de_small/: de_fixture.npz  de_fixture_metadata.json
tests/data/fixtures/small/: small_fixture.npz  small_fixture_metadata.json
tests/data/golden/de_small/: golden_de_small.npz  golden_de_small_metadata.json  labels.csv  marker_genes.csv  marker_matrix.csv  params.csv  sc_dat.csv  stat_A.csv  stat_B.csv  stat_C.csv
tests/data/golden/small/: controls.csv  golden_small.npz  golden_small_metadata.json  labels.csv  map.csv  mixture_input.csv  phi_cell_state.csv  phi_cell_type.csv  phi_update.csv  reference_input.csv  sample_one_Z.csv  sample_one_theta.csv  (+4 more)
tests/integration/: test_de_fixture_regression.py  test_de_golden_parity.py  test_small_fixture_regression.py  test_small_golden_parity.py
tests/notebooks/: test_tutorial_deconvolution_notebook.py
tests/unit/: test_api_surface.py  test_gibbs.py  test_models.py  test_posterior.py  test_preprocess.py  test_qc_get_exp_stat.py  test_reference_update.py
