[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesprism"
version = "0.1.0"
description = "Parity-first Python translation scaffold of BayesPrism"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-2.0-or-later OR GPL-3.0-or-later" }
authors = [
  { name = "BayesPrism Python Translation" }
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "scikit-learn>=1.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.6",
  "mypy>=1.11",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bayesprism = ["data/*.txt"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
disable_error_code = ["union-attr", "arg-type", "no-any-return"]
exclude = ["tests/"]
